# tp-algorithmique-3is

./: README.md
TD2/: pgcd.cpp
TP1/: CMakeLists.txt
TP1/TD1/: heap.cpp  queue_array.cpp  queue_circularlist.cpp  stack_array.cpp  stack_ll.cpp
TP1/TD2/: pgcd.cpp  sous_seq.cpp
